--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- Header -->
 					<header id="header">
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
+						<h1>Bonjour à tous <strong>Bienvenue</strong>, sur mon site web n'est-il pas magnifique ? <a href="http://templated.co">TEMPLATED</a><br />
 						and released for free under the Creative Commons License.</h1>
 						<ul class="icons">
 							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
