--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dopefolio</title>
+    <title>Paul Bonnel</title>
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -27,20 +27,18 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Paul Bonnel</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="./index.html" class="header__link"> Home </a>
+              <a href="./index.html" class="header__link"> Accueil </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#about" class="header__link">About </a>
+              <a href="./index.html#about" class="header__link">À propos </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#projects" class="header__link">
-                Projects
-              </a>
+              <a href="./index.html#projects" class="header__link"> Projets </a>
             </li>
             <li class="header__link-wrapper">
               <a href="./index.html#contact" class="header__link"> Contact </a>
@@ -64,15 +62,15 @@
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
             <li class="header__sm-menu-link">
-              <a href="./index.html"> Home </a>
+              <a href="./index.html"> Accueil </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#about"> About </a>
+              <a href="./index.html#about"> À propos </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Projects </a>
+              <a href="./index.html#projects"> Projets </a>
             </li>
 
             <li class="header__sm-menu-link">
@@ -84,12 +82,13 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is John Doe</h1>
+        <h1 class="heading-primary">Paul Bonnel</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+            Je suis spécialisée dans l'intégration front-end et le développement
+            WordPress. Je saurais vous accompagner au mieux dans la réalisation
+            de vos projets digitaux qui seront menés à bien d'une étape à
+            l'autre.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -153,36 +152,38 @@
     <section id="about" class="about sec-pad">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
-          <span class="heading-sec__main">About Me</span>
+          <span class="heading-sec__main">À propos</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Je suis spécialisé en développement web front-end et avec le CMS
+            WordPress. Je peux travailler autant sur de l'intégration responsive
+            (HTML/CSS/JavaScript) que sur la création et le développement de
+            thèmes et extensions WordPress.
           </span>
         </h2>
         <div class="about__content">
           <div class="about__content-main">
-            <h3 class="about__content-title">Get to know me!</h3>
+            <h3 class="about__content-title">En quelques mots!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
-                Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
-                <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
-                with talented people to create
-                <strong>digital products </strong>
-                for both business and consumer use.
+                Ma particularité est que je suis un profil
+                <strong>"hybride"</strong> : d'une part je suis un Développeur
+                web certifié <strong>front-end </strong> et
+                <strong>back-end </strong>qui passe la majeure partie de sa
+                journée la tête dans ses lignes de code, mais je suis également
+                un <strong>pédagogue</strong> capable de comprendre vos
+                problématique et de vous proposer une solution
+                <strong>claire et rapide</strong>
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
-                <strong>contact</strong> me here.
+                🤝 De nature <strong>autodidacte</strong> , je prend à cœur les
+                projets que j'effectue en apportant toujours au
+                <strong>maximum de valeur ajoutée</strong>. La qualité de
+                travail couplée à une bonne communication sont pour moi les clés
+                d'un projet réussi. <strong>Contactez</strong> moi ici.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
-              >Contact</a
+              >Contactez-moi</a
             >
           </div>
           <div class="about__content-skills">
@@ -191,13 +192,13 @@
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
-              <div class="skills__skill">SASS</div>
+              <div class="skills__skill">Front-End</div>
+              <div class="skills__skill">Back-end</div>
+              <div class="skills__skill">Automatisation</div>
+              <div class="skills__skill">Script</div>
               <div class="skills__skill">GIT</div>
               <div class="skills__skill">Shopify</div>
               <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
               <div class="skills__skill">Android</div>
               <div class="skills__skill">IOS</div>
             </div>
@@ -210,8 +211,12 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Je met un point d'honneur à ce que les sites que je produits soient
+            faciles à prendre en main pour vous. J'ai horreur des agences /
+            freelances qui rendent tout volontairement compliqué pour que vous
+            soyez forcés de refaire appel à eux. Je veux des relations saines,
+            de long terme et que vous soyez pleins propriétaires et maîtres de
+            vos sites.
           </span>
         </h2>
 
@@ -219,73 +224,80 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/p1.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">malbuisson.art</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Je met un point d'honneur à ce que les sites que je produits
+                soient faciles à prendre en main pour vous. J'ai horreur des
+                agences / freelances qui rendent tout volontairement compliqué
+                pour que vous soyez forcés de refaire appel à eux. Je veux des
+                relations saines, de long terme et que vous soyez pleins
+                propriétaires et maîtres de vos sites.
               </p>
-              <a
+              <!-- <a
                 href="./project-1.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
-              >
+              > -->
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/p2.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">
+                festival-montperreux.com
+              </h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Travailler avec moi, c'est profiter de mon expertise et de mon
+                expérience depuis plus de 6 ans sur de nombreux projets.Je
+                m'intègre à votre équipe pour vous offrir le renfort dont vous
+                avez besoin.
               </p>
-              <a
+              <!-- <a
                 href="./project-2.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
-              >
+              > -->
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/p3.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
+              <h3 class="projects__row-content-title">as-proprete.net</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Toujours de bonne humeur, je suis quelqu'un de motivée qui fait
+                son maximum pour satisfaire le client. Je reste continuellement
+                ouverte à d'éventuelles critiques qui me permettront d'évoluer.
+                N'hésitez pas à me contacter si mon profil vous intéresse ;)
               </p>
-              <a
+              <!-- <a
                 href="./project-3.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
-              >
+              > -->
             </div>
           </div>
         </div>
