--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
+              src="./assets/jpeg/me.jpeg"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
@@ -85,19 +85,22 @@
         <h1 class="heading-primary">Paul Bonnel</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Je suis spécialisée dans l'intégration front-end et le développement
-            WordPress. Je saurais vous accompagner au mieux dans la réalisation
-            de vos projets digitaux qui seront menés à bien d'une étape à
-            l'autre.
+            Je suis spécialisée dans l'intégration front-end et back-end, le
+            WordPress et le dévolopement information. Je saurais vous
+            accompagner au mieux dans la réalisation de vos projets digitaux qui
+            seront menés à bien d'une étape à l'autre.
           </p>
         </div>
         <div class="home-hero__cta">
-          <a href="./#projects" class="btn btn--bg">Projects</a>
+          <a href="./#projects" class="btn btn--bg">Projets</a>
         </div>
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a
+            href="https://www.linkedin.com/in/paul-bonnel/"
+            class="home-hero__social-icon-link"
+          >
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -105,7 +108,7 @@
             />
           </a>
         </div>
-        <div class="home-hero__social">
+        <!-- <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
               src="./assets/png/github-ico.png"
@@ -113,8 +116,8 @@
               class="home-hero__social-icon"
             />
           </a>
-        </div>
-        <div class="home-hero__social">
+        </div> -->
+        <!-- <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
               src="./assets/png/twitter-ico.png"
@@ -122,8 +125,8 @@
               class="home-hero__social-icon"
             />
           </a>
-        </div>
-        <div class="home-hero__social">
+        </div> -->
+        <!-- <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
               src="./assets/png/yt-ico.png"
@@ -131,10 +134,10 @@
               class="home-hero__social-icon"
             />
           </a>
-        </div>
+        </div> -->
         <div class="home-hero__social">
           <a
-            href="#"
+            href="https://www.instagram.com/bonnel.production/"
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
@@ -157,7 +160,7 @@
             Je suis spécialisé en développement web front-end et avec le CMS
             WordPress. Je peux travailler autant sur de l'intégration responsive
             (HTML/CSS/JavaScript) que sur la création et le développement de
-            thèmes et extensions WordPress.
+            solutions informatique pour vos tous vos projets.
           </span>
         </h2>
         <div class="about__content">
@@ -179,10 +182,12 @@
                 projets que j'effectue en apportant toujours au
                 <strong>maximum de valeur ajoutée</strong>. La qualité de
                 travail couplée à une bonne communication sont pour moi les clés
-                d'un projet réussi. <strong>Contactez</strong> moi ici.
+                d'un projet réussi.
               </p>
             </div>
-            <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
+            <a
+              href="mailto:paul.bonnel.pro@gmail.com?subject=Prise%20de%20contact"
+              class="btn btn--med btn--theme dynamicBgClr"
               >Contactez-moi</a
             >
           </div>
@@ -196,8 +201,7 @@
               <div class="skills__skill">Back-end</div>
               <div class="skills__skill">Automatisation</div>
               <div class="skills__skill">Script</div>
-              <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
+              <div class="skills__skill">Python</div>
               <div class="skills__skill">Wordpress</div>
               <div class="skills__skill">Android</div>
               <div class="skills__skill">IOS</div>
@@ -209,7 +213,7 @@
     <section id="projects" class="projects sec-pad">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-bg">
-          <span class="heading-sec__main">Projects</span>
+          <span class="heading-sec__main">Projets</span>
           <span class="heading-sec__sub">
             Je met un point d'honneur à ce que les sites que je produits soient
             faciles à prendre en main pour vous. J'ai horreur des agences /
@@ -305,14 +309,25 @@
     </section>
     <section id="contact" class="contact sec-pad dynamicBg">
       <div class="main-container">
+        <span class="heading-sec__sub heading-sec__sub--lt">
+          Je souhaite aujourd'hui mettre mes compétences au service de vos
+          projets. N'hésitez pas à me contacter. Au plaisir de travailler
+          ensemble. À très bientôt !
+        </span>
         <h2 class="heading heading-sec heading-sec__mb-med">
-          <span class="heading-sec__main heading-sec__main--lt">Contact</span>
-          <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
-          </span>
+          <!-- <span class="heading-sec__main heading-sec__main--lt">Contact</span> -->
+          <center>
+            <div class="home-hero__cta">
+              <a
+                href="mailto:paul.bonnel.pro@gmail.com?subject=Prise%20de%20contact"
+                class="btn btn--bg"
+              >
+                Contactez-moi
+              </a>
+            </div>
+          </center>
         </h2>
-        <div class="contact__form-container">
+        <!-- <div class="contact__form-container">
           <form action="#" class="contact__form">
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
@@ -352,7 +367,7 @@
               Submit
             </button>
           </form>
-        </div>
+        </div> -->
       </div>
     </section>
     <footer class="main-footer">
@@ -360,39 +375,41 @@
         <div class="main-footer__upper">
           <div class="main-footer__row main-footer__row-1">
             <h2 class="heading heading-sm main-footer__heading-sm">
-              <span>Social</span>
+              <span>Mes réseaux</span>
             </h2>
             <div class="main-footer__social-cont">
               <a target="_blank" rel="noreferrer" href="#">
                 <img
+                  href="https://www.linkedin.com/in/paul-bonnel/"
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              </a> -->
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/twitter-ico.png"
                   alt="icon"
                 />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              </a> -->
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/yt-ico.png"
                   alt="icon"
                 />
-              </a>
+              </a> -->
               <a target="_blank" rel="noreferrer" href="#">
                 <img
+                  href="https://www.instagram.com/bonnel.production/"
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
                   alt="icon"
@@ -401,20 +418,20 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Paul Bonnel</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              Très réactif, je m'investis entièrement sur tous mes projets,
+              accompagnant mes clients d'un bout à l'autre de leur projet, et
+              continue à travailler avec eux bien au delà de la mise en ligne du
+              projet.
             </p>
           </div>
         </div>
 
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
+          Fait en Martinique par
+          <a rel="noreferrer" target="_blank" href="#">Paul Bonnel</a>
         </div>
       </div>
     </footer>
