--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                 projets que j'effectue en apportant toujours au
                 <strong>maximum de valeur ajoutée</strong>. La qualité de
                 travail couplée à une bonne communication sont pour moi les clés
-                d'un projet réussi.
+                d'un projet réussi. Je suis disponible
+                <strong>1 jour par semaine.</strong>
               </p>
             </div>
             <a
