--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
       <div class="home-hero__content">
         <h1 class="heading-primary">Paul Bonnel</h1>
         <div class="home-hero__info">
-          <p class="text-primary">
-            Je suis spécialisée dans l'intégration front-end et back-end, le
-            WordPress et le dévolopement information. Je saurais vous
-            accompagner au mieux dans la réalisation de vos projets digitaux qui
-            seront menés à bien d'une étape à l'autre.
-          </p>
+          <h1 class="heading-secondary">
+            Développeur Informatique Indépendant
+          </h1>
+          <center>
+            <p class="text-primary">📍 Fort-De-France, Martinique</p>
+          </center>
         </div>
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projets</a>
@@ -189,11 +189,11 @@
             <a
               href="mailto:paul.bonnel.pro@gmail.com?subject=Prise%20de%20contact"
               class="btn btn--med btn--theme dynamicBgClr"
-              >Contactez-moi</a
+              >Contactez-moi par mail</a
             >
           </div>
           <div class="about__content-skills">
-            <h3 class="about__content-title">My Skills</h3>
+            <h3 class="about__content-title">Mes Compétences</h3>
             <div class="skills">
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
@@ -203,6 +203,7 @@
               <div class="skills__skill">Automatisation</div>
               <div class="skills__skill">Script</div>
               <div class="skills__skill">Python</div>
+              <div class="skills__skill">PHP</div>
               <div class="skills__skill">Wordpress</div>
               <div class="skills__skill">Android</div>
               <div class="skills__skill">IOS</div>
@@ -379,9 +380,12 @@
               <span>Mes réseaux</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://www.linkedin.com/in/paul-bonnel/"
+              >
                 <img
-                  href="https://www.linkedin.com/in/paul-bonnel/"
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
@@ -408,9 +412,12 @@
                   alt="icon"
                 />
               </a> -->
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://www.instagram.com/bonnel.production/"
+              >
                 <img
-                  href="https://www.instagram.com/bonnel.production/"
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
                   alt="icon"
