--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <strong>claire et rapide</strong>
               </p>
               <p class="about__content-details-para">
-                🤝 De nature <strong>autodidacte</strong> , je prend à cœur les
+                🤝 De nature <strong>autodidacte</strong> , je prends à cœur les
                 projets que j'effectue en apportant toujours au
                 <strong>maximum de valeur ajoutée</strong>. La qualité de
                 travail couplée à une bonne communication sont pour moi les clés
@@ -217,11 +217,11 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projets</span>
           <span class="heading-sec__sub">
-            Je met un point d'honneur à ce que les sites que je produits soient
+            Je mets un point d'honneur à ce que les sites que je produits soient
             faciles à prendre en main pour vous. J'ai horreur des agences /
             freelances qui rendent tout volontairement compliqué pour que vous
             soyez forcés de refaire appel à eux. Je veux des relations saines,
-            de long terme et que vous soyez pleins propriétaires et maîtres de
+            de long terme et que vous soyez pleinement propriétaire et maître de
             vos sites.
           </span>
         </h2>
