--- a/mail.html
+++ b/mail.html
@@ -221,7 +221,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projets</span>
           <span class="heading-sec__sub">
-            Je met un point d'honneur à ce que les sites que je produits soient
+            s un point d'honneur à ce que les sites que je produis soient
             faciles à prendre en main pour vous. J'ai horreur des agences /
             freelances qui rendent tout volontairement compliqué pour que vous
             soyez forcés de refaire appel à eux. Je veux des relations saines,
@@ -243,7 +243,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">malbuisson.art</h3>
               <p class="projects__row-content-desc">
-                Je met un point d'honneur à ce que les sites que je produits
+                Je mets un point d'honneur à ce que les sites que je produis
                 soient faciles à prendre en main pour vous. J'ai horreur des
                 agences / freelances qui rendent tout volontairement compliqué
                 pour que vous soyez forcés de refaire appel à eux. Je veux des
