--- a/phone.html
+++ b/phone.html
@@ -220,7 +220,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projets</span>
           <span class="heading-sec__sub">
-            Je met un point d'honneur à ce que les sites que je produits soient
+            Je met un point d'honneur à ce que les sites que je produis soient
             faciles à prendre en main pour vous. J'ai horreur des agences /
             freelances qui rendent tout volontairement compliqué pour que vous
             soyez forcés de refaire appel à eux. Je veux des relations saines,
@@ -242,12 +242,9 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">malbuisson.art</h3>
               <p class="projects__row-content-desc">
-                Je met un point d'honneur à ce que les sites que je produits
-                soient faciles à prendre en main pour vous. J'ai horreur des
-                agences / freelances qui rendent tout volontairement compliqué
-                pour que vous soyez forcés de refaire appel à eux. Je veux des
-                relations saines, de long terme et que vous soyez pleins
-                propriétaires et maîtres de vos sites.
+                Contactez-moi pour un premier échange sur vos besoins ainsi que
+                vos attentes, je saurai vous apporter une réponse et une
+                expertise rapide et précise
               </p>
               <!-- <a
                 href="./project-1.html"
