--- a/phone.html
+++ b/phone.html
@@ -87,9 +87,7 @@
       <div class="home-hero__content">
         <h1 class="heading-primary">Paul Bonnel</h1>
         <div class="home-hero__info">
-          <h1 class="heading-secondary">
-            Développeur Informatique Indépendant
-          </h1>
+          <h1 class="heading-secondary">Ingénieur Informatique Indépendant</h1>
           <center>
             <p class="text-primary">📍 Fort-De-France, Martinique</p>
           </center>
