--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 <!-- partial:index.partial.html -->
 <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
-    <model-viewer src="https://cdn.glitch.com/21710700-a398-4f93-9a6c-eb0810904e74/industrial_lamp.gltf?v=1569485480008"
+    <model-viewer src="./model.glb"
                   ios-src="https://cdn.glitch.com/21710700-a398-4f93-9a6c-eb0810904e74/industrial_floor_lamp.usdz?v=1569485305204"
-                  alt="Tall Lamp"
+                  alt="Pikfrite 5 pouce"
                   background-color="#eeeeee"
                   shadow-intensity="1"
                   camera-controls
@@ -48,7 +48,7 @@
     </model-viewer>
     <section class="attribution">
       <span>
-        <h1>Tall Lamp</h1>
+        <h1>Pikfrite 5 pouces</h1>
       </span>
       <a class="cc" href="https://creativecommons.org/licenses/by/2.0/" target="_blank">
         <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg">
