--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
     <model-viewer src="./model.glb" ar
-      ios-src="https://cdn.glitch.com/21710700-a398-4f93-9a6c-eb0810904e74/industrial_floor_lamp.usdz?v=1569485305204"
+      ios-src="./model.usdz"
       alt="Tall Lamp" background-color="#eeeeee" shadow-intensity="1" camera-controls interaction-prompt="auto"
       auto-rotate ar magic-leap quick-look-browsers="safari chrome">
       <button slot="ar-button" id="ar-button">
