--- a/index.html
+++ b/index.html
@@ -38,14 +38,8 @@
   <!-- partial:index.partial.html -->
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
-    <model-viewer src="./model.glb" ar
-      ios-src="./model.usdz"
-      alt="Tall Lamp" background-color="#eeeeee" shadow-intensity="1" camera-controls interaction-prompt="auto"
-      auto-rotate ar magic-leap quick-look-browsers="safari chrome">
-      <button slot="ar-button" id="ar-button">
-        View in your space
-      </button>
-
+    <model-viewer src="./model.glb" ios-src="/.model.usdz" poster="/img.png
+      shadow-intensity="1" ar camera-controls touch-action="pan-y" alt="A 3D model carousel">
     </model-viewer>
     <section class="attribution">
       <span>
