--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   <!-- partial:index.partial.html -->
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
-    <model-viewer src="./model.glb" ios-src="/.model.usdz" poster="/img.png
-      shadow-intensity="1" ar camera-controls touch-action="pan-y" alt="A 3D model carousel">
-    </model-viewer>
+    <model-viewer src="./model.glb" ar ar-scale="fixed" camera-controls
+      touch-action="pan-y" alt="A 3D model of an astronaut"
+      ios-src="./model.usdz" xr-environment></model-viewer>
     <section class="attribution">
       <span>
         <h1>Pikfrite 5"</h1>
