--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <!-- partial:index.partial.html -->
   <div id="card">
-    <model-viewer src="./model.glb"
-    ios-src="./model.usdz"
+    <model-viewer src="./compress-origin-fix.glb"
+    ios-src="./compress-origin-fix.usdz"
     alt="A 3D model of an astronaut"
     ar
     camera-controls></model-viewer>
